--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
 			  document.getElementById("bTtitle1").textContent = "Pesetacoin";
 			  tickerCode = "PTC";
 				coingeckoCoinName = "pesetacoin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "piggy") {
 			  document.getElementById("coinjs_pub").value = "0x76";
@@ -758,7 +758,7 @@
 			  document.getElementById("bTtitle1").textContent = "Piggycoin";
 			  tickerCode = "PIGGY";
 				coingeckoCoinName = "piggycoin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "pink") {
 			  document.getElementById("coinjs_pub").value = "0x3";
@@ -769,7 +769,7 @@
 			  document.getElementById("bTtitle1").textContent = "Pinkcoin";
 			  tickerCode = "PINK";
 				coingeckoCoinName = "pinkcoin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "pivx") {
 			  document.getElementById("coinjs_pub").value = "0x1e";
@@ -780,7 +780,7 @@
 			  document.getElementById("bTtitle1").textContent = "Pivx";
 			  tickerCode = "PIVX";
 				coingeckoCoinName = "pivx";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "xpm") {
 			  document.getElementById("coinjs_pub").value = "0x17";
@@ -791,7 +791,7 @@
 			  document.getElementById("bTtitle1").textContent = "Primecoin";
 			  tickerCode = "XPM";
 				coingeckoCoinName = "primecoin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "qrk") {
 			  document.getElementById("coinjs_pub").value = "0x3a";
@@ -802,7 +802,7 @@
 			  document.getElementById("bTtitle1").textContent = "Quark";
 			  tickerCode = "QRK";
 				coingeckoCoinName = "quark";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "rdd") {
 			  document.getElementById("coinjs_pub").value = "0x3d";
@@ -813,7 +813,7 @@
 			  document.getElementById("bTtitle1").textContent = "Reddcoin";
 			  tickerCode = "RDD";
 				coingeckoCoinName = "reddcoin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "ric") {
 			  document.getElementById("coinjs_pub").value = "0x3c";
@@ -824,7 +824,7 @@
 			  document.getElementById("bTtitle1").textContent = "Riecoin";
 			  tickerCode = "RIC";
 				coingeckoCoinName = "riecoin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "bcc") {
 			  document.getElementById("coinjs_pub").value = "0x12";
@@ -846,7 +846,7 @@
 			  document.getElementById("bTtitle1").textContent = "Diamond";
 			  tickerCode = "DMD";
 				coingeckoCoinName = "diamond";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "xcp") {
 			  document.getElementById("coinjs_pub").value = "0x0";
@@ -857,7 +857,6 @@
 			  document.getElementById("bTtitle1").textContent = "CounterParty";
 			  tickerCode = "XCP";
 				coingeckoCoinName = "counterparty";
-				coinGecko = "false";
 			}
 			else if (document.getElementById("customCoinTicker").value == "cloak") {
 			  document.getElementById("coinjs_pub").value = "0x1b";
@@ -868,7 +867,7 @@
 			  document.getElementById("bTtitle1").textContent = "CloakCoin";
 			  tickerCode = "CLOAK";
 				coingeckoCoinName = "cloakcoin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "dgb") {
 			  document.getElementById("coinjs_pub").value = "0x1e";
@@ -878,8 +877,8 @@
 			  document.getElementById("bTtitle").textContent = "DigiBtyes";
 			  document.getElementById("bTtitle1").textContent = "DigiBtyes";
 			  tickerCode = "DGB";
-				coingeckoCoinName = "digibytes";
-				coinGecko = "false";
+				coingeckoCoinName = "digibyte";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "dime") {
 			  document.getElementById("coinjs_pub").value = "0xf";
@@ -890,7 +889,7 @@
 			  document.getElementById("bTtitle1").textContent = "Dimecoin";
 			  tickerCode = "DIME";
 				coingeckoCoinName = "dimecoin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "xvg") {
 			  document.getElementById("coinjs_pub").value = "0x1e";
@@ -901,7 +900,7 @@
 			  document.getElementById("bTtitle1").textContent = "Verge";
 			  tickerCode = "XVG";
 				coingeckoCoinName = "verge";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "1337") {
 			  document.getElementById("coinjs_pub").value = "0x30";
@@ -912,18 +911,18 @@
 			  document.getElementById("bTtitle1").textContent = "Elite";
 			  tickerCode = "1337";
 				coingeckoCoinName = "1337";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "eth") {
-			  document.getElementById("coinjs_pub").value = "";
-			  document.getElementById("coinjs_priv").value = "";
-			  document.getElementById("coinjs_multisig").value = "";
+			  document.getElementById("coinjs_pub").value = "0x";
+			  document.getElementById("coinjs_priv").value = "0x";
+			  document.getElementById("coinjs_multisig").value = "0x";
 			  document.getElementById("coinLogo").src = "images/logo/eth.png";
 			  document.getElementById("bTtitle").textContent = "Ethereum";
 			  document.getElementById("bTtitle1").textContent = "Ethereum";
 			  tickerCode = "ETH";
 				coingeckoCoinName = "ethereum";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "erc") {
 			  document.getElementById("coinjs_pub").value = "0x21";
@@ -934,7 +933,7 @@
 			  document.getElementById("bTtitle1").textContent = "Europecoin";
 			  tickerCode = "ERC";
 				coingeckoCoinName = "europecoin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "btx") {
 			  document.getElementById("coinjs_pub").value = "0x03";
@@ -945,7 +944,7 @@
 			  document.getElementById("bTtitle1").textContent = "BitCore";
 			  tickerCode = "BTX";
 				coingeckoCoinName = "bitcore";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "arg") {
 			  document.getElementById("coinjs_pub").value = "0x17";
@@ -956,7 +955,7 @@
 			  document.getElementById("bTtitle1").textContent = "Argentum";
 			  tickerCode = "ARG";
 				coingeckoCoinName = "argentum";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "utip") {
 			  document.getElementById("coinjs_pub").value = "0x17";
@@ -966,8 +965,8 @@
 			  document.getElementById("bTtitle").textContent = "uTipcoin";
 			  document.getElementById("bTtitle1").textContent = "uTipcoin";
 			  tickerCode = "UTIP";
-				coingeckoCoinName = "utipcoin";
-				coinGecko = "false";
+				coingeckoCoinName = "utip";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "xqr") {
 			  document.getElementById("coinjs_pub").value = "0x";
@@ -989,7 +988,7 @@
 			  document.getElementById("bTtitle1").textContent = "CACHeCoin";
 			  tickerCode = "CACHE";
 				coingeckoCoinName = "cachecoin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "civ") {
 			  document.getElementById("coinjs_pub").value = "0x1c";
@@ -1000,7 +999,7 @@
 			  document.getElementById("bTtitle1").textContent = "Civitas";
 			  tickerCode = "CIV";
 				coingeckoCoinName = "civitas";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "ade") {
 			  document.getElementById("coinjs_pub").value = "0x17";
@@ -1011,7 +1010,7 @@
 			  document.getElementById("bTtitle1").textContent = "Adeptio";
 			  tickerCode = "ADE";
 				coingeckoCoinName = "adeptio";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "aeg") {
 			  document.getElementById("coinjs_pub").value = "0x17";
@@ -1022,7 +1021,7 @@
 			  document.getElementById("bTtitle1").textContent = "Aegeus";
 			  tickerCode = "AEG";
 				coingeckoCoinName = "aegeus";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "ac") {
 				document.getElementById("coinjs_pub").value = "0x17";
@@ -1033,7 +1032,7 @@
 			  document.getElementById("bTtitle1").textContent = "Asiacoin";
 			  tickerCode = "AC";
 				coingeckoCoinName = "asiacoin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "btdx") {
 			  document.getElementById("coinjs_pub").value = "0x99";
@@ -1044,7 +1043,7 @@
 			  document.getElementById("bTtitle1").textContent = "Bitcloud";
 			  tickerCode = "BTDX";
 				coingeckoCoinName = "bitcloud";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "bsd") {
 			  document.getElementById("coinjs_pub").value = "0x66";
@@ -1055,7 +1054,7 @@
 			  document.getElementById("bTtitle1").textContent = "BitSend";
 			  tickerCode = "BSD";
 				coingeckoCoinName = "bitsend";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "xch") {
 			  document.getElementById("coinjs_pub").value = "0xef";
@@ -1089,7 +1088,7 @@
 			  document.getElementById("bTtitle1").textContent = "Monero";
 			  tickerCode = "XMR";
 				coingeckoCoinName = "monero";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "nsr)") {
 			  document.getElementById("coinjs_pub").value = "0x3f";
@@ -1100,7 +1099,7 @@
 			  document.getElementById("bTtitle1").textContent = "Nushares";
 			  tickerCode = "NSR";
 				coingeckoCoinName = "nushares";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "nxt") {
 			  document.getElementById("coinjs_pub").value = "0x";
@@ -1111,7 +1110,7 @@
 			  document.getElementById("bTtitle1").textContent = "Nxt";
 			  tickerCode = "NXT";
 				coingeckoCoinName = "nxt";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "xrp") {
 			  document.getElementById("coinjs_pub").value = "0x";
@@ -1122,7 +1121,7 @@
 			  document.getElementById("bTtitle1").textContent = "Ripple";
 			  tickerCode = "XRP";
 				coingeckoCoinName = "ripple";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "sdc") {
 			  document.getElementById("coinjs_pub").value = "0x3f";
@@ -1144,7 +1143,7 @@
 			  document.getElementById("bTtitle1").textContent = "Startcoin";
 			  tickerCode = "START";
 				coingeckoCoinName = "startcoin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "xtz") {
 			  document.getElementById("coinjs_pub").value = "0x";
@@ -1155,7 +1154,7 @@
 			  document.getElementById("bTtitle1").textContent = "Tezos";
 			  tickerCode = "XTZ";
 				coingeckoCoinName = "tezos";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "tpc") {
 			  document.getElementById("coinjs_pub").value = "0x41";
@@ -1177,7 +1176,7 @@
 			  document.getElementById("bTtitle1").textContent = "Vpncoin";
 			  tickerCode = "VPN";
 				coingeckoCoinName = "vpncoin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "zec") {
 			  document.getElementById("coinjs_pub").value = "0x1c";
@@ -1188,7 +1187,7 @@
 			  document.getElementById("bTtitle1").textContent = "zCash";
 			  tickerCode = "ZEC";
 				coingeckoCoinName = "zcash";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "zrc") {
 			  document.getElementById("coinjs_pub").value = "0x50";
@@ -1221,7 +1220,7 @@
 			  document.getElementById("bTtitle1").textContent = "Sterlingcoin";
 			  tickerCode = "SLG";
 				coingeckoCoinName = "sterlingcoin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "ldoge") {
 			  document.getElementById("coinjs_pub").value = "0x5a";
@@ -1232,7 +1231,7 @@
 			  document.getElementById("bTtitle1").textContent = "LiteDoge";
 			  tickerCode = "LDOGE";
 				coingeckoCoinName = "litedoge";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "mint") {
 			  document.getElementById("coinjs_pub").value = "0x33";
@@ -1243,7 +1242,7 @@
 			  document.getElementById("bTtitle1").textContent = "Mintcoin";
 			  tickerCode = "MINT";
 				coingeckoCoinName = "mintcoin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "aias") {
 			  document.getElementById("coinjs_pub").value = "0x17";
@@ -1254,7 +1253,7 @@
 			  document.getElementById("bTtitle1").textContent = "AIAScoin";
 			  tickerCode = "AIAS";
 				coingeckoCoinName = "aiascoin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "arepa") {
 			  document.getElementById("coinjs_pub").value = "0x17";
@@ -1287,7 +1286,7 @@
 			  document.getElementById("bTtitle1").textContent = "Aricoin";
 			  tickerCode = "ARI";
 				coingeckoCoinName = "aricoin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "adc") {
 			  document.getElementById("coinjs_pub").value = "0x17";
@@ -1298,7 +1297,7 @@
 			  document.getElementById("bTtitle1").textContent = "Audiocoin";
 			  tickerCode = "ADC";
 				coingeckoCoinName = "audiocoin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "b3") {
 			  document.getElementById("coinjs_pub").value = "0x3f";
@@ -1309,7 +1308,7 @@
 			  document.getElementById("bTtitle1").textContent = "B3Coin";
 			  tickerCode = "B3";
 				coingeckoCoinName = "b3coin";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "bzc") {
 			  document.getElementById("coinjs_pub").value = "0x1c";
@@ -1320,7 +1319,7 @@
 			  document.getElementById("bTtitle1").textContent = "Bitzec";
 			  tickerCode = "bzc";
 				coingeckoCoinName = "bitzec";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "bean") {
 			  document.getElementById("coinjs_pub").value = "0x3";
@@ -1342,7 +1341,7 @@
 			  document.getElementById("bTtitle1").textContent = "Beenode";
 			  tickerCode = "BNODE";
 				coingeckoCoinName = "beenode";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "kng") {
 			  document.getElementById("coinjs_pub").value = "0x4b";
@@ -1353,7 +1352,7 @@
 			  document.getElementById("bTtitle1").textContent = "BetKings";
 			  tickerCode = "KNG";
 				coingeckoCoinName = "betkings";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "biid") {
 			  document.getElementById("coinjs_pub").value = "0x19";
@@ -1375,7 +1374,7 @@
 			  document.getElementById("bTtitle1").textContent = "BitBay";
 			  tickerCode = "BAY";
 				coingeckoCoinName = "bitbay";
-				coinGecko = "false";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "xbc") {
 			  document.getElementById("coinjs_pub").value = "0x19";
@@ -4052,7 +4051,6 @@ jQuery(document).ready(function($) {
 							</div>
 						</div>
 						<br><br>
-						<center><small>Note: Not all coins are supported by coingecko widgets and will result in "Loading"</small></center><br>
 						<script src="https://widgets.coingecko.com/coingecko-coin-market-ticker-list-widget.js"></script>
 <div id="market-ticker"><coingecko-coin-market-ticker-list-widget  coin-id="pandacoin" currency="usd" locale="en"></coingecko-coin-market-ticker-list-widget></div>
 					</div>
