--- a/index.html
+++ b/index.html
@@ -857,6 +857,7 @@
 			  document.getElementById("bTtitle1").textContent = "CounterParty";
 			  tickerCode = "XCP";
 				coingeckoCoinName = "counterparty";
+				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "cloak") {
 			  document.getElementById("coinjs_pub").value = "0x1b";
