--- a/index.html
+++ b/index.html
@@ -1695,7 +1695,7 @@
 			  document.getElementById("bTtitle").textContent = "Deviantcoin";
 			  document.getElementById("bTtitle1").textContent = "Deviantcoin";
 			  tickerCode = "DEV";
-				coingeckoCoinName = "deviant-coin";
+				coingeckoCoinName = "deviantcoin";
 				coinGecko = "true";
 			}
 			else if (document.getElementById("customCoinTicker").value == "dmb") {
